removed vthreads usages refactoring, clean up, added errors handler